# PupilOptixLab

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  pt_config.ini
3dparty/: CMakeLists.txt
3dparty/imgui/: CMakeLists.txt
app/ReSTIR_DI/: CMakeLists.txt  main.cpp  reservoir.h
app/ReSTIR_DI/GBufferPass/: gbuffer.cu  pass.cpp  pass.h  type.h
app/ReSTIR_DI/ShadingPass/: pass.cpp  pass.h  shading.cu  type.h
app/ReSTIR_DI/ShadowRayPass/: pass.cpp  pass.h  shadow.cu  type.h
app/ReSTIR_DI/SpatialReusePass/: pass.cpp  pass.h  spatial_reuse.cu  type.h
app/ReSTIR_DI/TemporalReusePass/: pass.cpp  pass.h  temporal_reuse.cu  type.h
app/ddgi/: CMakeLists.txt  main.cpp
app/ddgi/gbuffer/: gbuffer.cu  pass.cpp  pass.h  type.h
app/ddgi/pt/: pass.cpp  pass.h  pt.cu  type.h
example/cuda_test/: CMakeLists.txt  kernel.cu  kernel.h  main.cpp  pass.cpp  pass.h  test.cu
example/path_tracer/: CMakeLists.txt  main.cpp  main.cu  pt_pass.cpp  pt_pass.h  type.h
framework/: CMakeLists.txt  static.h  static.h.in
framework/cuda/: check.h  context.cpp  context.h  data_view.h  kernel.h  matrix.h  preprocessor.h  random.h  shape.cpp  shape.h  stream.cpp  stream.h  texture.cpp  texture.h  timer.cpp  timer.h  util.h  vec_math.h
framework/decl/: material_decl.inl
framework/dx12/: context.cpp  context.h  d3dx12.h
framework/material/: fresnel.h  ggx.h  ior.h  material.cpp  material.h  material_decl.inl  optix_material.cpp  optix_material.h  predefine.h
framework/material/bsdf/: bsdf.cu  bsdf.h  conductor.h  dielectric.h  diffuse.h  plastic.h  rough_conductor.h  rough_dielectric.h  rough_plastic.h
framework/optix/: check.h  context.cpp  context.h  denoiser.cpp  denoiser.h  geometry.cpp  geometry.h  module.cpp  module.h  pass.cpp  pass.h  pipeline.cpp  pipeline.h  sbt.cpp  sbt.h  sbt.inl  util.h
framework/optix/scene/: camera.cpp  camera.h  emitter.cpp  emitter.h  ias_manager.cpp  ias_manager.h  mesh.cpp  mesh.h  render_object.cpp  render_object.h  scene.cpp  scene.h
framework/render/: camera.h  curve.h  emitter.h  geometry.h  material.h  texture.h  util.h
framework/render/emitter/: area.h  env.h  sphere.h  types.h
framework/render/material/: fresnel.h  ggx.h  ior.h  optix_material.cpp  optix_material.h  predefine.h
framework/resource/: emitter.h  material.cpp  material.h  object.h  scene.cpp  scene.h  shape.cpp  shape.h  texture.cpp  texture.h
framework/resource/hair/: cemyuksel_hair.cpp  cemyuksel_hair.h
framework/resource/material/: conductor.cpp  dielectric.cpp  diffuse.cpp  hair.cpp  plastic.cpp  rough_conductor.cpp  rough_dielectric.cpp  rough_plastic.cpp  twosided.cpp
framework/resource/mesh/: mesh.h  obj.cpp
framework/resource/mi_xml/: parser.cpp  parser.h  tag.cpp  tag.h  xml_object.cpp  xml_object.h
framework/resource/shape/: cube.cpp  curve.cpp  curve_hair.cpp  rectangle.cpp  sphere.cpp  triangle_mesh.cpp
framework/resource/texture/: bitmap.cpp  checkerboard.cpp  image.cpp  image.h  rgb.cpp
framework/resource/xml/: object.cpp  object.h  parser.cpp  parser.h  tag.h  util_loader.cpp  util_loader.h  visitor.h
framework/scene/: camera.cpp  camera.h  emitter.h  gas.cpp  gas.h  ias.cpp  ias.h  scene.cpp  scene.h  shape.cpp  shape.h  texture.cpp  texture.h
framework/scene/emitter/: envmap.cpp  sphere.cpp  triangle_mesh_emitter.cpp
framework/scene/loader/: mixml.cpp  mixml.h  util.cpp  util.h
framework/scene/xml/: object.cpp  object.h  parser.cpp  parser.h  tag.h  util_loader.cpp  util_loader.h  visitor.h
framework/system/: buffer.cpp  buffer.h  buffer_to_canvas.cu  camera.cpp  camera.h  denoise_pass.cpp  denoise_pass.h  event.cpp  event.h  gui.cpp  gui.h  output.hlsl  pass.cpp  pass.h  post_process.cpp  post_process.cu  post_process.cuh  post_process.h  profiler.cpp  profiler.h  resource.cpp  resource.h  system.cpp  system.h  type.h  world.cpp  world.h  wsa.h
framework/system/gui/: buffer_to_canvas.cu  buffer_to_canvas.cuh  gui.cpp  gui.h  pass.cpp  pass.h
framework/util/: aabb.h  camera.cpp  camera.h  component.h  data.h  event.h  hash.h  id.h  log.h  math.h  texture.cpp  texture.h  thread_pool.cpp  thread_pool.h  timer.cpp  timer.h  transform.cpp  transform.h  type.h  util.cpp  util.h
framework/util/math/: base.h  constant.h  function.cpp  function.h  matrix.h  quaternion.cpp  quaternion.h  transform.cpp  transform.h
framework/world/: camera.cpp  camera.h  emitter.cpp  emitter.h  gas_manager.cpp  gas_manager.h  ias_manager.cpp  ias_manager.h  render_object.cpp  render_object.h  world.cpp  world.h
path_tracer/: CMakeLists.txt  main.cpp  main.cu  pt_pass.cpp  pt_pass.h  type.h
src/: CMakeLists.txt  main.cpp  static.h  static.h.in
src/common/: CMakeLists.txt  camera.cpp  camera.h  enum.h  macro_map.h  texture.h  transform.cpp  transform.h  type.h  util.cpp  util.h
src/common/cuda_util/: preprocessor.h  util.h  vec_math.h
src/cuda_util/: CMakeLists.txt  camera.cpp  camera.h  data_view.h  preprocessor.h  random.h  texture.h  util.h  vec_math.h
src/ddgi/: CMakeLists.txt  main.cpp
src/ddgi/gbuffer/: main.cu  pass.h  type.h
src/ddgi/pt/: main.cu  pass.h  type.h
src/device/: CMakeLists.txt  cuda_texture.cpp  cuda_texture.h  dx12_device.cpp  dx12_device.h  error_handle.h  optix_device.cpp  optix_device.h  wsa.cpp
src/device/optix_wrap/: mesh.cpp  mesh.h  module.cpp  module.h  pass.h  pipeline.cpp  pipeline.h  sbt.cpp  sbt.h
src/gui/: CMakeLists.txt  dx12_backend.cpp  dx12_backend.h  shader.hlsl  window.cpp  window.h
src/material/: CMakeLists.txt  dielectric.cpp  fresnel.h  ggx.h  ior.h  material.cpp  material.h  optix_material.cpp  optix_material.h  predefine.h
src/material/bsdf/: bsdf.h  conductor.h  dielectric.h  diffuse.h  plastic.h  rough_conductor.h  rough_plastic.h
src/optix_util/: CMakeLists.txt  camera.cpp  camera.h  emitter.cpp  emitter.h  geometry.cpp  geometry.h  util.h
src/path_tracer/: CMakeLists.txt  main.cpp  main.cu  type.h
src/scene/: CMakeLists.txt  emitter.h  loader.cpp  loader.h  scene.cpp  scene.h  shape.cpp  shape.h  texture.cpp  texture.h  transform.cpp  transform.h
(+69 files in other folders)
